feat: community stand (#81)
* feat: add community stand reward scanning

* feat: add community stand display page

* docs: document community stand feature
